force-app/src/objects/TR1__JobManagerActionMenu__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>TR1__ClosingReport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Closing Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__MassReject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Mass Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Mass_CV_Request__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Hide Mass CV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__MoveBack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Move Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Reject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Sendout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Sendout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SubmitEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Submit and Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SubmitWithoutEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Submit Without Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__UndoReject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Undo Reject</label>
        <type>Checkbox</type>
    </fields>
    <label>Job Manager Action Menu Hide Settings</label>
</CustomObject>